# CoCES

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
coces/: __init__.py  cli.py  config.py  evaluation.py
coces/data/: __init__.py  adapters.py  dataset.py  graph.py  path_search.py  schema.py
coces/inference/: __init__.py  generator.py  pruning.py
coces/models/: __init__.py  coces.py  encoder.py  evaluator.py  selector.py
coces/training/: losses.py  trainer.py
coces/utils/: device.py  io.py  seed.py
configs/: cwq.yaml  webqsp.yaml
examples/: kg.tsv  names.tsv  raw.json  relations.tsv  types.tsv
scripts/: evaluate.py  make_ablations.py  predict.py  prepare_data.py  run_ablations.py  train.py
tests/: test_metrics.py  test_path_search.py
