[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coces"
version = "0.1.0"
description = "Compact Counterfactual Evidence Subgraph Learning for KG-augmented reasoning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "torch>=2.1",
  "transformers>=4.40",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
coces = "coces.cli:main"

[tool.setuptools.packages.find]
include = ["coces*"]

[tool.ruff]
line-length = 100
target-version = "py310"

